# socket-agent

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  test_socket_agent.py
examples/: agent_client_demo.py  llm_agent_real.py
examples/benchmark/: README.md  agent_benchmark.py
examples/benchmark/banking_api/: main.py
examples/benchmark/grocery_api/: main.py
examples/benchmark/recipe_api/: main.py
examples/todo_fastapi/: README.md  main.py
socket-agent-client/: README.md  pyproject.toml
socket-agent-client/examples/: basic_usage.py  with_learning.py
socket-agent-client/socket_agent_client/: __init__.py  client.py  models.py
socket_agent/: __init__.py  decorators.py  fastapi_middleware.py  schemas.py  spec_builder.py
socket_agent_client/: README.md  pyproject.toml
socket_agent_client/examples/: basic_usage.py
socket_agent_client/socket_agent_client/: __init__.py  cache.py  client.py  descriptor.py  discovery.py  exceptions.py  executor.py  learner.py  models.py  policy.py  stubs.py  telemetry.py  templates.py  types.py
socket_agent_client/socket_agent_client/adapters/: __init__.py  langchain.py  mcp.py  openai.py
socket_agent_client/socket_agent_client/router/: __init__.py  confidence.py  extractor.py  model.py  rules.py
tests/: __init__.py  test_manifest_schema.py  test_spec_size.py
